--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -39,7 +39,7 @@ pipelineConfig:
           - name: build-and-push-base
             steps:
               - agent:
-                  image: rawlingsj/executor:dev21
+                  image: gcr.io/kaniko-project/executor:v0.9.0
                 command: /bin/bash
                 args: ['-c','/kaniko/executor --dockerfile=Dockerfile.base --destination=docker.io/warrenbailey/jenkins-base:$(cat VERSION) --context=jenkins-base --cache-repo=jenkins-x-docker-registry.jx.svc.cluster.local:5000/ --cache=true --cache-dir=/workspace --skip-tls-verify-registry=jenkins-x-docker-registry.jx.svc.cluster.local:5000']
           - name: build-and-push-maven
