--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -1,6 +1,6 @@
 FROM jenkinsxio/jenkins-filerunner:0.1.4
 
-RUN apt-get update && apt-get install -y --allow-unauthenticated \
+RUN apt-get update && apt-get install -y \
   wget \
   bzip2 \
   python-pip \
