--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -5,7 +5,7 @@ pipelineConfig:
         agent:
           image: rawlingsj/executor:dev21
         stages:
-          - name: next version
+          - name: next-version
             environment:
               - name: GIT_COMMITTER_EMAIL
                 value: jenkins-x@googlegroups.com
@@ -17,20 +17,20 @@ pipelineConfig:
                 value: jenkins-x-bot-test
             steps:
               - agent:
-                  image: rawlingsj/jx:dev136
+                  image: jenkinsxio/jx:1.3.925
                 command: jx
                 args:
                   - step
                   - next-version
                   - -t
                   - --use-git-tag-only
-          - name: list
+          - name: output-version
             steps:
               - agent:
-                  image: centos:7
-                command: ls
+                  image: bash:5.0.2
+                command: cat
                 args:
-                  - -la
+                  - VERSION
           - name: replace-versions
             steps:
               - agent:
@@ -39,9 +39,17 @@ pipelineConfig:
           - name: build-and-push-base
             steps:
               - agent:
-                  image: gcr.io/kaniko-project/executor:v0.9.0
+                  image: rawlingsj/executor:dev21
                 command: /bin/bash
                 args: ['-c','/kaniko/executor --dockerfile=Dockerfile.base --destination=docker.io/warrenbailey/jenkins-base:$(cat VERSION) --context=jenkins-base --cache-repo=jenkins-x-docker-registry.jx.svc.cluster.local:5000/ --cache=true --cache-dir=/workspace --skip-tls-verify-registry=jenkins-x-docker-registry.jx.svc.cluster.local:5000']
+          - name: warm-cache
+            steps:
+              - agent:
+                  image: gcr.io/kaniko-project/warmer
+                command: /kaniko/warmer
+                args:
+                  - --cache-dir=/workspace
+                  - --image=docker.io/warrenbailey/jenkins-base
           - name: build-and-push-maven
             steps:
               - agent:
