--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -36,6 +36,20 @@ pipelineConfig:
               - agent:
                   image: centos:7
                 command: ./replace-versions.sh
+
+          - name: build-and-push-base-native
+            steps:
+                - agent:
+                  image: gcr.io/kaniko-project/executor:v0.9.0
+                  command: /kaniko/executor
+                  args:
+                    - --dockerfile=Dockerfile.base
+                    - --destination=docker.io/warrenbailey/jenkins-base:$(cat VERSION)
+                    - --context=jenkins-base
+                    - --cache-repo=jenkins-x-docker-registry.jx.svc.cluster.local:5000
+                    - --cache=true
+                    - --cache-dir=/workspace
+                    - --skip-tls-verify-registry=jenkins-x-docker-registry.jx.svc.cluster.local:5000
           - name: build-and-push-base
             steps:
               - agent:
