--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -1,8 +1,6 @@
 FROM jenkinsxio/jenkins-filerunner:0.1.4
 
-RUN sudo dpkg --configure -a
-
-RUN apt-get update && apt-get install -y --allow-unauthenticated \
+RUN apt-get update && apt-get install -y --allow-unauthenticated -f \
   wget \
   bzip2 \
   python-pip \
