--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -3,7 +3,7 @@ pipelineConfig:
     release:
       pipeline:
         agent:
-          image: rawlingsj/executor:dev21
+          image: rawlingsj/executor:dev31
         stages:
           - name: next-version
             environment:
@@ -36,37 +36,30 @@ pipelineConfig:
               - agent:
                   image: centos:7
                 command: ./replace-versions.sh
-
-          - name: build-and-push-base-native
-            steps:
-                - agent:
-                  image: gcr.io/kaniko-project/executor:v0.9.0
-                  command: /kaniko/executor
-                  args:
-                    - --dockerfile=Dockerfile.base
-                    - --destination=docker.io/warrenbailey/jenkins-base:$(cat VERSION)
-                    - --context=jenkins-base
-                    - --cache-repo=jenkins-x-docker-registry.jx.svc.cluster.local:5000
-                    - --cache=true
-                    - --cache-dir=/workspace
-                    - --skip-tls-verify-registry=jenkins-x-docker-registry.jx.svc.cluster.local:5000
+#          - name: build-and-push-base
+#            steps:
+#              - agent:
+#                  image: gcr.io/kaniko-project/executor:v0.9.0
+#                command: /kaniko/executor
+#                args:
+#                  - --dockerfile=Dockerfile.base
+#                  - --destination=docker.io/warrenbailey/jenkins-base:$(cat VERSION)
+#                  - --context=jenkins-base
+#                  - --cache-repo=jenkins-x-docker-registry.jx.svc.cluster.local:5000
+#                  - --cache=true
+#                  - --cache-dir=/workspace
+#                  - --skip-tls-verify-registry=jenkins-x-docker-registry.jx.svc.cluster.local:5000
           - name: build-and-push-base
             steps:
-              - agent:
-                  image: rawlingsj/executor:dev21
-                command: /bin/bash
-                args: ['-c','/kaniko/executor --dockerfile=Dockerfile.base --destination=docker.io/warrenbailey/jenkins-base:$(cat VERSION) --context=jenkins-base --cache-repo=jenkins-x-docker-registry.jx.svc.cluster.local:5000/ --cache=true --cache-dir=/workspace --skip-tls-verify-registry=jenkins-x-docker-registry.jx.svc.cluster.local:5000']
+                - command: /bin/bash
+                  args: ['-c','/kaniko/executor --dockerfile=Dockerfile.base --destination=docker.io/warrenbailey/jenkins-base:$(cat VERSION) --context=/workspace/workspace--cache-repo=jenkins-x-docker-registry.jx.svc.cluster.local:5000/ --cache=true --cache-dir=/workspace --skip-tls-verify-registry=jenkins-x-docker-registry.jx.svc.cluster.local:5000']
           - name: warm-cache
             steps:
-              - agent:
-                  image: gcr.io/kaniko-project/warmer
-                command: /kaniko/warmer
-                args:
-                  - --cache-dir=/workspace
-                  - --image=docker.io/warrenbailey/jenkins-base
+                - command: /kaniko/warmer
+                  args:
+                    - --cache-dir=/workspace
+                    - --image=docker.io/warrenbailey/jenkins-base
           - name: build-and-push-maven
             steps:
-              - agent:
-                  image: rawlingsj/executor:dev21
-                command: /bin/bash
-                args: ['-c','/kaniko/executor --dockerfile=Dockerfile.maven --destination=docker.io/warrenbailey/jenkins-maven:$(cat VERSION) --context=jenkins-maven --cache-repo=jenkins-x-docker-registry.jx.svc.cluster.local:5000/ --cache=true --cache-dir=/workspace --skip-tls-verify-registry=jenkins-x-docker-registry.jx.svc.cluster.local:5000']
+                - command: /bin/bash
+                  args: ['-c','/kaniko/executor --dockerfile=Dockerfile.maven --destination=docker.io/warrenbailey/jenkins-maven:$(cat VERSION) --context=/workspace/workspace--cache-repo=jenkins-x-docker-registry.jx.svc.cluster.local:5000/ --cache=true --cache-dir=/workspace --skip-tls-verify-registry=jenkins-x-docker-registry.jx.svc.cluster.local:5000']
