--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -3,56 +3,64 @@ pipelineConfig:
     release:
       pipeline:
         agent:
-          image: rawlingsj/executor:dev31
+         image: rawlingsj/executor:dev31
+#          image: warrenbailey/executor:dev4
         stages:
-          - name: next-version
-            environment:
-              - name: GIT_COMMITTER_EMAIL
-                value: jenkins-x@googlegroups.com
-              - name: GIT_AUTHOR_EMAIL
-                value: jenkins-x@googlegroups.com
-              - name: GIT_AUTHOR_NAME
-                value: jenkins-x-bot-test
-              - name: GIT_COMMITTER_NAME
-                value: jenkins-x-bot-test
-            steps:
-              - agent:
-                  image: jenkinsxio/jx:1.3.925
-                command: jx
-                args:
-                  - step
-                  - next-version
-                  - -t
-                  - --use-git-tag-only
-          - name: output-version
-            steps:
-              - agent:
-                  image: bash:5.0.2
-                command: cat
-                args:
-                  - VERSION
-          - name: replace-versions
-            steps:
-              - agent:
-                  image: centos:7
-                command: ./replace-versions.sh
-#          - name: build-and-push-base
+#          - name: next-version
+#            environment:
+#              - name: GIT_COMMITTER_EMAIL
+#                value: jenkins-x@googlegroups.com
+#              - name: GIT_AUTHOR_EMAIL
+#                value: jenkins-x@googlegroups.com
+#              - name: GIT_AUTHOR_NAME
+#                value: jenkins-x-bot-test
+#              - name: GIT_COMMITTER_NAME
+#                value: jenkins-x-bot-test
 #            steps:
 #              - agent:
-#                  image: gcr.io/kaniko-project/executor:v0.9.0
-#                command: /kaniko/executor
+#                  image: jenkinsxio/jx:1.3.925
+#                command: jx
 #                args:
-#                  - --dockerfile=Dockerfile.base
-#                  - --destination=docker.io/warrenbailey/jenkins-base:$(cat VERSION)
-#                  - --context=jenkins-base
-#                  - --cache-repo=jenkins-x-docker-registry.jx.svc.cluster.local:5000
-#                  - --cache=true
-#                  - --cache-dir=/workspace
-#                  - --skip-tls-verify-registry=jenkins-x-docker-registry.jx.svc.cluster.local:5000
+#                  - step
+#                  - next-version
+#                  - -t
+#                  - --use-git-tag-only
+#          - name: output-version
+#            steps:
+#              - agent:
+#                  image: bash:5.0.2
+#                command: cat
+#                args:
+#                  - VERSION
+#          - name: replace-versions
+#            steps:
+#              - agent:
+#                  image: centos:7
+#                command: ./replace-versions.sh
           - name: build-and-push-base
             steps:
-                - command: /bin/bash
-                  args: ['-c','/kaniko/executor --dockerfile=Dockerfile.base --destination=docker.io/warrenbailey/jenkins-base:$(cat VERSION) --context=/workspace/workspace--cache-repo=jenkins-x-docker-registry.jx.svc.cluster.local:5000/ --cache=true --cache-dir=/workspace --skip-tls-verify-registry=jenkins-x-docker-registry.jx.svc.cluster.local:5000']
+              - agent:
+                  image: gcr.io/kaniko-project/executor:v0.9.0
+                command: /kaniko/executor
+                args:
+                  - --dockerfile=Dockerfile.base
+                  - --destination=docker.io/warrenbailey/jenkins-base:${input.params.VERSION}
+                  - --context=jenkins-base
+                  - --cache-repo=jenkins-x-docker-registry.jx.svc.cluster.local:5000
+                  - --cache=true
+                  - --cache-dir=/workspace
+                  - --skip-tls-verify-registry=jenkins-x-docker-registry.jx.svc.cluster.local:5000
+#          - name: build-and-push-base
+#            steps:
+#                - command: "/kaniko/executor"
+#                  args:
+#                    - --dockerfile=Dockerfile.base
+#                    - --destination=docker.io/warrenbailey/jenkins-base:$(cat VERSION)
+#                    - --context=jenkins-base
+#                    - --cache-repo=jenkins-x-docker-registry.jx.svc.cluster.local:5000/
+#                    - --cache=true
+#                    - --cache-dir=/workspace
+#                    - --skip-tls-verify-registry=jenkins-x-docker-registry.jx.svc.cluster.local:5000
           - name: warm-cache
             steps:
                 - command: /kaniko/warmer
@@ -61,5 +69,5 @@ pipelineConfig:
                     - --image=docker.io/warrenbailey/jenkins-base
           - name: build-and-push-maven
             steps:
-                - command: /bin/bash
-                  args: ['-c','/kaniko/executor --dockerfile=Dockerfile.maven --destination=docker.io/warrenbailey/jenkins-maven:$(cat VERSION) --context=/workspace/workspace--cache-repo=jenkins-x-docker-registry.jx.svc.cluster.local:5000/ --cache=true --cache-dir=/workspace --skip-tls-verify-registry=jenkins-x-docker-registry.jx.svc.cluster.local:5000']
+                - command: "/bin/bash"
+                  args: ['-c','/kaniko/executor --dockerfile=Dockerfile.maven --destination=docker.io/warrenbailey/jenkins-maven:$(cat VERSION) --context=jenkins-base--cache-repo=jenkins-x-docker-registry.jx.svc.cluster.local:5000/ --cache=true --cache-dir=/workspace --skip-tls-verify-registry=jenkins-x-docker-registry.jx.svc.cluster.local:5000']
