--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -44,7 +44,7 @@ pipelineConfig:
                 command: /kaniko/executor
                 args:
                   - --dockerfile=Dockerfile.base
-                  - --destination=docker.io/warrenbailey/jenkins-base:${inputs.params.version}
+                  - --destination=docker.io/warrenbailey/jenkins-base:0.0.0
                   - --context=jenkins-base
                   - --cache-repo=jenkins-x-docker-registry.jx.svc.cluster.local:5000
                   - --cache=true
