--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -19,6 +19,14 @@ pipelineConfig:
                   - --cache=true
                   - --cache-dir=/workspace
                   - --skip-tls-verify-registry=jenkins-x-docker-registry.jx.svc.cluster.local:5000
+          - name: replace-versions
+            steps:
+              - agent:
+                  image: centos:7
+                command: ./replace-versions.sh
+                args:
+                  - warrenbailey
+                  - ${inputs.params.version}
           - name: build-and-push-csharp
             steps:
                 - agent:
