--- a/Dockerfile.elixir
+++ b/Dockerfile.elixir
@@ -1,4 +1,4 @@
-FROM JENKINS_BASE_TAG
+FROM warrenbailey/jenkins-base:1
 
 RUN \
   echo "deb http://packages.erlang-solutions.com/debian stretch contrib" >> /etc/apt/sources.list
