--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -16,6 +16,15 @@ pipelineConfig:
                   - --global
                   - creditial.helper
                   - store
+          - name: jx-git
+            steps:
+              - agent:
+                  image: jenkinsxio/jx:1.3.957
+                command: jx
+                args:
+                  - step
+                  - git
+                  - credentials
 #          - name: build-and-push-base
 #            steps:
 #              - command: /kaniko/executor
