--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -17,6 +17,9 @@ pipelineConfig:
                   - creditial.helper
                   - store
           - name: jx-git
+            environment:
+              - name: XDG_CONFIG_HOME
+                value: /workspace/workspace/
             steps:
               - agent:
                   image: jenkinsxio/jx:1.3.957
@@ -25,7 +28,7 @@ pipelineConfig:
                   - step
                   - git
                   - credentials
-                  - -o /workspace/workspace/git/credentials
+#                  - -o /workspace/workspace/git/credentials
 #          - name: build-and-push-base
 #            steps:
 #              - command: /kaniko/executor
