--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -19,7 +19,7 @@ pipelineConfig:
           - name: jx-git
             environment:
               - name: XDG_CONFIG_HOME
-                value: /workspace/workspace/
+                value: /workspace/xdg_config
             steps:
               - agent:
                   image: jenkinsxio/jx:1.3.957
@@ -222,7 +222,7 @@ pipelineConfig:
           - name: update-bot
             environment:
               - name: XDG_CONFIG_HOME
-                value: /workspace/workspace
+                value: /workspace/xdg_config
             steps:
               - agent:
                   image: jenkinsxio/builder-maven
