--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -225,14 +225,14 @@ pipelineConfig:
                   image: centos:7
                 command: echo
                 args:
-                  - $XDG_CONFIG_HOME
+                  - ${XDG_CONFIG_HOME}
           - name: cat
             steps:
               - agent:
                   image: centos:7
                 command: cat
                 args:
-                  - $XDG_CONFIG_HOME/git/credentials
+                  - ${XDG_CONFIG_HOME}/git/credentials
           - name: update-bot
             environment:
               - name: XDG_CONFIG_HOME
